# OpenCVFilterApp

./: README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/opencvfilterapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/opencvfilterapp/: FullscreenImageActivity.kt  GalleryActivity.kt  GalleryAdapter.kt  MainActivity.kt
app/src/main/res/drawable/: filter_tag_bg.xml  gallery_overlay_bg.xml  ic_delete.xml  ic_favorite.xml  ic_favorite_border.xml  ic_share.xml  image_gradient_overlay.xml  rounded_button_bg.xml  rounded_button_purple.xml  spinner_background.xml  spinner_dropdown_bg.xml  spinner_main_bg.xml  spinner_popup_bg.xml  thumb_bg_circle.xml  thumb_square_bg.xml
app/src/main/res/layout/: activity_fullscreen_image.xml  activity_gallery.xml  activity_main.xml  custom_toast.xml  fullscreen_image_item.xml  item_gallery_image.xml  spinner_dropdown_item.xml  spinner_item.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/opencvfilterapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
